force-app/main/default/objects/Covamo_Model__mdt/Covamo_Model__mdt.object-meta.xml
<CustomObject>
    <label>Covamo Model</label>
    <pluralLabel>Covamo Models</pluralLabel>
</CustomObject>