force-app/main/default/objects/Covamo_Model__mdt/fields/BDF__c.field-meta.xml
<CustomField>
    <fullName>BDF__c</fullName>
    <label>BDF</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>