force-app/main/default/objects/Covamo_Model__mdt/fields/Conversion_SI__c.field-meta.xml
<CustomField>
    <fullName>Conversion_SI__c</fullName>
    <label>Conversion SI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>