force-app/main/default/objects/Covamo_Model__mdt/fields/Corporate_income_tax_payable__c.field-meta.xml
<CustomField>
    <fullName>Corporate_income_tax_payable__c</fullName>
    <label>Corporate income tax payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>