force-app/main/default/objects/Covamo_Model__mdt/fields/Corporate_income_tax_rate__c.field-meta.xml
<CustomField>
    <fullName>Corporate_income_tax_rate__c</fullName>
    <label>Corporate income tax rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>