force-app/main/default/objects/Covamo_Model__mdt/fields/Covamo_Header_ReportId__c.field-meta.xml
<CustomField>
    <fullName>Covamo_Header_ReportId__c</fullName>
    <label>Covamo Header ReportId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>