force-app/main/default/objects/Covamo_Model__mdt/fields/Integrity_check__c.field-meta.xml
<CustomField>
    <fullName>Integrity_check__c</fullName>
    <label>Integrity check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>