force-app/main/default/objects/Covamo_Model__mdt/fields/Payables__c.field-meta.xml
<CustomField>
    <fullName>Payables__c</fullName>
    <label>Payables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>