force-app/main/default/objects/Covamo_Model__mdt/fields/RE_Excise_Duties_in_local_currency__c.field-meta.xml
<CustomField>
    <fullName>RE_Excise_Duties_in_local_currency__c</fullName>
    <label>Excise Duties in local currency</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>