force-app/main/default/objects/Covamo_Model__mdt/fields/Stocks_Days__c.field-meta.xml
<CustomField>
    <fullName>Stocks_Days__c</fullName>
    <label>Stocks Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>