force-app/main/default/objects/Covamo_Model__mdt/fields/Temperature_Gain__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Gain__c</fullName>
    <label>Temperature Gain</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>